[package]
name = "multiqueue"
version = "0.3.2"
authors = ["Sam Schetterer <samschet@gmail.com>"]
license = "MIT"
description = "A fast mpmc broadcast queue"
repository = "https://github.com/schets/multiqueue"
documentation = "https://docs.rs/multiqueue"
readme = "Readme.md"
keywords = ["queue", "mpmc", "lockless", "broadcast", "message"]
categories = ['asynchronous', 'concurrency', 'data-structures', 'algorithms']


[dependencies]
crossbeam = "*"
smallvec = "*"
parking_lot = "*"
time = "*"
atomic_utilities = "*"
